# AoC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
2023/Day1/: part1.cpp  part2.cpp
2023/Day2/: part1.cpp  part2.cpp
Day1/: part1.cpp  part2.cpp
Day2/: part1.cpp  part2.cpp
src/: main.cpp
src/solutions/: solution.hpp
src/solutions/2023/Day1/: part1.cpp  part1.hpp  part2.cpp  part2.hpp
src/solutions/2023/Day2/: part1.cpp  part1.hpp  part2.cpp  part2.hpp
src/solutions/2025/Day1/: part1.cpp
src/utils/: all_solutions.hpp  graphics.hpp  solution_registry.cpp  solution_registry.hpp
